--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>Hello world</title>
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <script src="https://unpkg.com/mithril/mithril.js"></script>
